Added GPIO Address Decoded for Pico and Pico Power.

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@
 /Kicad/Computer/Main/Main Memory Select/Main Memory Select-backups/*
 /Kicad/Computer/MPU/W65C816 Debug Display/W65C816 Debug Display-backups/*
 /Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
+/Kicad/Pico/GPIO Address Decode/GPIO Address Decode-backups/*
+/Kicad/Pico/Pico/GPIO 16bit-backups/*
+/Kicad/Pico/Pico/Pico-backups/*
