Cleaned up Clock Control and Address Decode schematics.

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@
 /Kicad/Pico/Pico/Pico-backups/*
 /Kicad/Temp/Latch Slow/Latch Slow-backups/*
 /Paneliser/Pico GPIO/Fabrication/*
+/Paneliser/Pico GPIO/Pico GPIO.7z
