Auto-routed LCD Board.

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,4 @@
 /Kicad/Temp/Latch Slow/Latch Slow-backups/*
 /Paneliser/Pico GPIO/Fabrication/*
 /Paneliser/Pico GPIO/Pico GPIO.7z
+/Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_pcb.lck
