--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,4 @@
 /Paneliser/Pico GPIO/Fabrication/*
 /Paneliser/Pico GPIO/Pico GPIO.7z
 /Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_pcb.lck
+/Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_sch.lck
