Still converting the Video Board.

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,8 @@
 /Paneliser/Pico GPIO/Pico GPIO.7z
 /Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_pcb.lck
 /Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_sch.lck
+/Kicad/Computer/Component Boards/D Flip Flop 24bit/D Flip Flop 24bit-backups/*
+/Kicad/Computer/Video/Video Address Output/Address Buffer 24bit-backups/*
+/Kicad/Computer/Video/Video Address Output/Video Address Output-backups/*
+/Kicad/Computer/Video/Video Address Output/Video Signals Output-backups/*
+/Kicad/Computer/Video/Video Signals Output/Video Signals Output-backups/*
