Added Video Signals and Video Memory.

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,6 @@
 /Kicad/Computer/Video/Video Address Output/Video Address Output-backups/*
 /Kicad/Computer/Video/Video Address Output/Video Signals Output-backups/*
 /Kicad/Computer/Video/Video Signals Output/Video Signals Output-backups/*
+/Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/Video Memory 2MB-2024-02-29_173335.zip
+/Kicad/Computer/Video/Video Counter 12bit/Video Counter 12bit/*
+/Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/*
