Added Video Memory 2MB and D-type Flip Flop 16bit.

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,6 @@
 /Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/Video Memory 2MB-2024-02-29_173335.zip
 /Kicad/Computer/Video/Video Counter 12bit/Video Counter 12bit/*
 /Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/*
+/Kicad/Computer/Component Boards/D Flip Flop 16bit/D Flip Flop 16bit-backups/*
+/Kicad/Computer/Old/Video Timer/Video Timer-backups/*
+/Kicad/Desk Lamp/Battery Charger/Battery Charger-backups/*
