Mostly added an 18bit selector.

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@
 /Kicad/Computer/Component Boards/D Flip Flop 16bit/D Flip Flop 16bit-backups/*
 /Kicad/Computer/Old/Video Timer/Video Timer-backups/*
 /Kicad/Desk Lamp/Battery Charger/Battery Charger-backups/*
+/Kicad/Computer/Component Boards/Selector 18bit/Selector 18bit-backups/*
