Added a Video DAC and a Video Signal Dragger.

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,5 @@
 /Kicad/Computer/Component Boards/Selector 18bit/Selector 18bit-backups/*
 /Kicad/Computer/Video/Video Device RAM Select/Video Device RAM Select-backups/*
 /Kicad/Computer/Video/Video Main Memory Select/Video Main Memory Select-backups/*
+/Kicad/Computer/Video/Video DAC/Video DAC-backups/*
+/Kicad/Computer/Video/Video Signal Dragger/Video Signal Dragger-backups/*
