Added a 1-of-4 4bit Selector.

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,4 @@
 /Kicad/Computer/Video/Video Main Memory Select/Video Main Memory Select-backups/*
 /Kicad/Computer/Video/Video DAC/Video DAC-backups/*
 /Kicad/Computer/Video/Video Signal Dragger/Video Signal Dragger-backups/*
+/Kicad/Computer/Component Boards/Selector 1-of-4 4bit/Selector 1-of-4 4bit-backups/*
