Added a video clock board.

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@
 /Kicad/Computer/Video/Video DAC/Video DAC-backups/*
 /Kicad/Computer/Video/Video Signal Dragger/Video Signal Dragger-backups/*
 /Kicad/Computer/Component Boards/Selector 1-of-4 4bit/Selector 1-of-4 4bit-backups/*
+/Kicad/Computer/Component Boards/Selector 1-of-4 4bit with Input/*
+/Kicad/Computer/Video/Video Clock/Video Clock-backups/*
