--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,5 @@
 /Kicad/Computer/Component Boards/Selector 1-of-4 4bit/Selector 1-of-4 4bit-backups/*
 /Kicad/Computer/Component Boards/Selector 1-of-4 4bit with Input/*
 /Kicad/Computer/Video/Video Clock/Video Clock-backups/*
+/Kicad/Computer/Video/Video Board - Memory/Video Board - Memory-backups/*
+/Kicad/Computer/Video/Video Board - Signals/Video Board - Signals-backups/*
