Added Video Counter 12bit.  Added Selector 1-of-4 4bit with Input.  Manually routed dodgy bits of Video Video Board - Memory and Signals.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@
 /Kicad/Computer/Video Timer/Video 400x600 single-backups*
 /Kicad/Computer/Video Timer/Video Timer-backups*
 /Diagrams/Row Counter.dia~
+/Paneliser/Pico GPIO/Fabrication/*
+/Paneliser/Pico GPIO/Pico GPIO.7z
 /Kicad/*.kicad_sch-bak
 /Kicad/Computer/Video Timer/*kicad_sch-bak
 /Kicad/Desk Lamp/Desk Lamp-backups*
@@ -145,7 +147,6 @@
 /Kicad/Computer/MPU/HCP65 Memory/HCP65 Memory-backups/*
 /Kicad/Computer/MPU/W65C816 Breakout/W65C816 Breakout-backups/*
 /Kicad/Computer/MPU/W65C816 Clock Hold/W65C816 Clock Hold-backups/*
-/Kicad/Computer/Old/MPU Breakout/MPU Breakout-backups/MPU Breakout-2023-10-22_210129.zip
 /Kicad/Computer/MPU/HCP65 Single MPU Board/HCP65 Single MPU Board-backups/*
 /Kicad/Computer/Standard PCB/Standard PCB-backups/*
 /Kicad/Computer/MPU/HCP65 MPU Address Decode/HCP65 MPU Address Decode-backups/*
@@ -201,22 +202,15 @@
 /Kicad/Computer/Main/Default Board/Default Board-backups/*
 /Kicad/Computer/Main/Main Memory Select/Main Memory Select-backups/*
 /Kicad/Computer/MPU/W65C816 Debug Display/W65C816 Debug Display-backups/*
-/Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
 /Kicad/Pico/GPIO Address Decode/GPIO Address Decode-backups/*
 /Kicad/Pico/Pico/GPIO 16bit-backups/*
 /Kicad/Pico/Pico/Pico-backups/*
 /Kicad/Temp/Latch Slow/Latch Slow-backups/*
-/Paneliser/Pico GPIO/Fabrication/*
-/Paneliser/Pico GPIO/Pico GPIO.7z
-/Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_pcb.lck
-/Kicad/Computer/LCD/LCD Board/~LCD Board.kicad_sch.lck
 /Kicad/Computer/Component Boards/D Flip Flop 24bit/D Flip Flop 24bit-backups/*
 /Kicad/Computer/Video/Video Address Output/Address Buffer 24bit-backups/*
 /Kicad/Computer/Video/Video Address Output/Video Address Output-backups/*
 /Kicad/Computer/Video/Video Address Output/Video Signals Output-backups/*
 /Kicad/Computer/Video/Video Signals Output/Video Signals Output-backups/*
-/Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/Video Memory 2MB-2024-02-29_173335.zip
-/Kicad/Computer/Video/Video Counter 12bit/Video Counter 12bit/*
 /Kicad/Computer/Video/Video Memory 2MB/Video Memory 2MB-backups/*
 /Kicad/Computer/Component Boards/D Flip Flop 16bit/D Flip Flop 16bit-backups/*
 /Kicad/Computer/Old/Video Timer/Video Timer-backups/*
@@ -227,7 +221,7 @@
 /Kicad/Computer/Video/Video DAC/Video DAC-backups/*
 /Kicad/Computer/Video/Video Signal Dragger/Video Signal Dragger-backups/*
 /Kicad/Computer/Component Boards/Selector 1-of-4 4bit/Selector 1-of-4 4bit-backups/*
-/Kicad/Computer/Component Boards/Selector 1-of-4 4bit with Input/*
 /Kicad/Computer/Video/Video Clock/Video Clock-backups/*
 /Kicad/Computer/Video/Video Board - Memory/Video Board - Memory-backups/*
 /Kicad/Computer/Video/Video Board - Signals/Video Board - Signals-backups/*
+/Kicad/Computer/Component Boards/Selector 1-of-4 4bit with Input/Selector 1-of-4 4bit with Input-backups/*
