Cleaned up Main Memory.

--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,6 @@
 /Kicad/Computer/Video/Video Board - Memory/Video Board - Memory-backups/*
 /Kicad/Computer/Video/Video Board - Signals/Video Board - Signals-backups/*
 /Kicad/Computer/Component Boards/Selector 1-of-4 4bit with Input/Selector 1-of-4 4bit with Input-backups/*
+/Kicad/Computer/Main/Main Memory Abort/Main Memory Abort-backups/Main Memory Abort-2024-05-15_172134.zip
+/Kicad/Computer/Main/Main Memory Abort/Main Memory Abort-backups/*
+/Kicad/Computer/Main/Main Memory Channel/Main Memory Channel-backups/*
