Added the Status Device Board.

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@
 /Kicad/Computer/Main/Main Memory Abort/Main Memory Abort-backups/Main Memory Abort-2024-05-15_172134.zip
 /Kicad/Computer/Main/Main Memory Abort/Main Memory Abort-backups/*
 /Kicad/Computer/Main/Main Memory Channel/Main Memory Channel-backups/*
+/Kicad/Computer/Main/Hex LCD Device/Hex LCD Device-backups/*
