Added Kernal Mode to Processor Board.

--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,5 @@
 /Kicad/Computer/Main/Hex LCD Device/Hex LCD Device-backups/*
 /Kicad/Computer/Video/Video Data Select/Video Data Select-backups/*
 /Kicad/Computer/Video/Video Row Latch/Video Row Latch-backups/*
+/Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
+/Kicad/Computer/Main/Processor Board/freerouting.dsn
