--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,4 @@
 /Kicad/Computer/Video/Video Row Latch/Video Row Latch-backups/*
 /Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
 /Kicad/Computer/Main/Processor Board/freerouting.dsn
+/Kicad/Computer/Main/Processor Board/gui_defaults.par.bak
