Manually routing the Main Processor Board.

--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,4 @@
 /Kicad/Computer/Main/Processor Board/~Processor Board.kicad_sch.lck
 /Kicad/Computer/Main/Processor Board/freerouting.dsn
 /Kicad/Computer/Main/Processor Board/gui_defaults.par.bak
+/Kicad/Computer/Sound/Sound Board/~Sound Board.kicad_sch.lck
