--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@
 /Kicad/Computer/Main/Processor Board/freerouting.dsn
 /Kicad/Computer/Main/Processor Board/gui_defaults.par.bak
 /Kicad/Computer/Sound/Sound Board/~Sound Board.kicad_sch.lck
+/Kicad/Computer/MPU/W65C816 Latch/W65C816 Latch-backups/*
