Added a VIA Control board and re-routed the VIA Board.

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@
 /Kicad/Computer/Main/Processor Board/gui_defaults.par.bak
 /Kicad/Computer/Sound/Sound Board/~Sound Board.kicad_sch.lck
 /Kicad/Computer/MPU/W65C816 Latch/W65C816 Latch-backups/*
+/Kicad/Computer/VIA/VIA Control/VIA Control-backups/*
