Added SD card SD burst reading.

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,4 @@
 /Kicad/Computer/Component Boards/Clock Transition/Clock Transition-backups/*
 /Kicad/Speed/Processor Board-backups/*
 /Kicad/Speed/Speed-backups/*
+/Kicad/Computer/SD Card/SD Card Board/SD Card Board-backups/*
