Started adding SD Card writing.

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,4 @@
 /Kicad/Speed/Processor Board-backups/*
 /Kicad/Speed/Speed-backups/*
 /Kicad/Computer/SD Card/SD Card Board/SD Card Board-backups/*
+/Kicad/Computer/SD Card/SD Card Clock/SD Card Clock-backups/*
