Added a Clock Doubler.

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@
 /Kicad/Speed/Speed-backups/*
 /Kicad/Computer/SD Card/SD Card Board/SD Card Board-backups/*
 /Kicad/Computer/SD Card/SD Card Clock/SD Card Clock-backups/*
+/Kicad/Computer/Component Boards/Clock Doubler/Clock Doubler-backups/*
