--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,5 @@
 /Kicad/Computer/SD Card/SD Card Board/SD Card Board-backups/*
 /Kicad/Computer/SD Card/SD Card Clock/SD Card Clock-backups/*
 /Kicad/Computer/Component Boards/Clock Doubler/Clock Doubler-backups/*
+/Kicad/Computer/SD Card/SD Card Read Data/Clock Doubler-backups/*
+/Kicad/Computer/SD Card/SD Card Read Data/SD Card Read Data-backups/*
