--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,4 @@
 /Kicad/Computer/Component Boards/Clock Doubler/Clock Doubler-backups/*
 /Kicad/Computer/SD Card/SD Card Read Data/Clock Doubler-backups/*
 /Kicad/Computer/SD Card/SD Card Read Data/SD Card Read Data-backups/*
+/Kicad/Computer/SD Card/SD Card Read Signals/SD Card Read Signals-backups/*
