--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,4 @@
 /Kicad/Computer/SD Card/SD Card Read Data/Clock Doubler-backups/*
 /Kicad/Computer/SD Card/SD Card Read Data/SD Card Read Data-backups/*
 /Kicad/Computer/SD Card/SD Card Read Signals/SD Card Read Signals-backups/*
+/Kicad/Computer/SD Card/SD Card Read Function/SD Card Read Function-backups/*
