--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,4 @@
 /Kicad/Computer/SD Card/SD Card Read Data/SD Card Read Data-backups/*
 /Kicad/Computer/SD Card/SD Card Read Signals/SD Card Read Signals-backups/*
 /Kicad/Computer/SD Card/SD Card Read Function/SD Card Read Function-backups/*
+/Kicad/Computer/SD Card/SD Card Write Signals/SD Card Write Signals-backups/*
