--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,4 @@
 /Kicad/Computer/SD Card/SD Card Read Signals/SD Card Read Signals-backups/*
 /Kicad/Computer/SD Card/SD Card Read Function/SD Card Read Function-backups/*
 /Kicad/Computer/SD Card/SD Card Write Signals/SD Card Write Signals-backups/*
+/Kicad/Computer/SD Card/SD Card Write Data/SD Card Write Data-backups/*
