SD Card Board PCB.

--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,5 @@
 /Kicad/Computer/SD Card/SD Card Read Function/SD Card Read Function-backups/*
 /Kicad/Computer/SD Card/SD Card Write Signals/SD Card Write Signals-backups/*
 /Kicad/Computer/SD Card/SD Card Write Data/SD Card Write Data-backups/*
+/Kicad/Computer/SD Card/SD Card Full Socket/SD Card Full Socket-backups/*
+/Kicad/Computer/SD Card/SD Card Micro Socket/SD Card Micro Socket-backups/*
