Cleaned up Video Boards.

--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,4 @@
 /Kicad/Computer/SD Card/SD Card Write Data/SD Card Write Data-backups/*
 /Kicad/Computer/SD Card/SD Card Full Socket/SD Card Full Socket-backups/*
 /Kicad/Computer/SD Card/SD Card Micro Socket/SD Card Micro Socket-backups/*
+/Kicad/Computer/Component Boards/Counter 24bit/Counter 24bit-backups/*
