Added a TTL5V UART.

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,5 @@
 /Kicad/Computer/SD Card/SD Card Full Socket/SD Card Full Socket-backups/*
 /Kicad/Computer/SD Card/SD Card Micro Socket/SD Card Micro Socket-backups/*
 /Kicad/Computer/Component Boards/Counter 24bit/Counter 24bit-backups/*
+/Kicad/Computer/UART/TTL5V/TTL5V-backups/*
+/Kicad/Computer/UART/UART Board/UART Board-backups/*
