Removed LCD copper fills.

--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@
 /Kicad/Pico/Pico Wide GPIO Connect/Pico Wide GPIO Connect-backups/*
 /Kicad/Video Monitor/LED Address 4x4/LED Address 4x4-backups/*
 /Kicad/Video Monitor/LED Panel 4x4/LED Panel 4x4-backups/*
+/Kicad/Computer/Old/Async FIFO Write/Async FIFO Write-backups/*
