Added Graphics Transparency and Data; and routed Graphics Board.

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,5 @@
 /Kicad/Computer/Graphics/Graphics Board/Graphics Board-backups/*
 /Kicad/Computer/Graphics/fp-info-cache
 /Kicad/Computer/Component Boards/Adder 16bit/fp-info-cache
+/Kicad/Computer/Graphics/Graphics Signals/Graphics Signals-backups/*
+/Kicad/Computer/Graphics/Graphics Transparency/Graphics Transparency-backups/*
