Manually re-routed Graphics Board.

--- a/.gitignore
+++ b/.gitignore
@@ -269,3 +269,6 @@
 /Kicad/Computer/Component Boards/Adder 16bit/fp-info-cache
 /Kicad/Computer/Graphics/Graphics Signals/Graphics Signals-backups/*
 /Kicad/Computer/Graphics/Graphics Transparency/Graphics Transparency-backups/*
+/Kicad/Computer/Audio/Sound Address Decode/Sound Address Decode-backups/*
+/Kicad/Computer/Audio/Audio Board/Audio Board-backups/*
+/Kicad/Computer/Audio/Sound Clock/Sound Clock-backups/*
