Split Main Memory Abort into Enable and Abort.

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@
 /Kicad/Computer/Audio/Sound Address Decode/Sound Address Decode-backups/*
 /Kicad/Computer/Audio/Audio Board/Audio Board-backups/*
 /Kicad/Computer/Audio/Sound Clock/Sound Clock-backups/*
+/Kicad/Computer/Main/Main Memory Enable/Main Memory Enable-backups/*
