Added a Blitter Board.

--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,4 @@
 /Kicad/Computer/Memory/Memory Board/Memory Board-backups/*
 /Kicad/Computer/Memory/Memory 4MB/Memory 4MB-backups/*
 /Kicad/EPM7160S Programmer/EPM7160S Programmer-backups/*
+/Kicad/Computer/Blitter/Blitter Board/Blitter Board-backups/*
