Tidied and re-routed the PS2 Board

--- a/.gitignore
+++ b/.gitignore
@@ -295,3 +295,4 @@
 /Kicad/Computer/Processor/W65C816 Clock Hold/W65C816 Clock Hold-backups/*
 /Kicad/Computer/Processor/W65C816 Debug Display/W65C816 Debug Display-backups/*
 /Kicad/Computer/Processor/W65C816 Latch/W65C816 Latch-backups/*
+*.kicad_sch.lck
