--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,4 @@
 /Kicad/Computer/Graphics/Graphics Board/Graphics Board.wrl
 /Kicad/Computer/LCD/LCD Board/LCD Board.wrl
 /Kicad/Computer/Memory/Memory Board/Memory Board.wrl
+/Kicad/Computer/PS2/PS2 Board/PS2 Board.wrl
