--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,4 @@
 /Kicad/Computer/Memory/Memory Board/Memory Board.wrl
 /Kicad/Computer/PS2/PS2 Board/PS2 Board.wrl
 /Kicad/Computer/SD Card/SD Card Board/SD Card Board.wrl
+/Kicad/Computer/UART/UART Board/UART Board.wrl
