Use VRML instead of STEPs for VIA Board models.

--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,4 @@
 /Kicad/Computer/PS2/PS2 Board/PS2 Board.wrl
 /Kicad/Computer/SD Card/SD Card Board/SD Card Board.wrl
 /Kicad/Computer/UART/UART Board/UART Board.wrl
+/Kicad/Computer/VIA/VIA Board/VIA Board.wrl
