Added a Real Time Clock device.

--- a/.gitignore
+++ b/.gitignore
@@ -310,3 +310,4 @@
 /Kicad/Computer/VIA/VIA Board/VIA Board.wrl
 /Kicad/Computer/Video/Video Board - Memory/Video Board - Memory.wrl
 /Kicad/Computer/Video/Video Board - Signals/Video Board - Signals.wrl
+/Kicad/Computer/Main/Clock Device/Clock Device-backups/*
