Added RTC device to Mainboard Small.

--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,4 @@
 /Kicad/Computer/Video/Video Board - Memory/Video Board - Memory.wrl
 /Kicad/Computer/Video/Video Board - Signals/Video Board - Signals.wrl
 /Kicad/Computer/Main/Clock Device/Clock Device-backups/*
+/Kicad/Computer/Main/Status Device/Status Device-backups/*
