Rounded Video Memory 2MB traces.

--- a/.gitignore
+++ b/.gitignore
@@ -312,3 +312,4 @@
 /Kicad/Computer/Video/Video Board - Signals/Video Board - Signals.wrl
 /Kicad/Computer/Main/Clock Device/Clock Device-backups/*
 /Kicad/Computer/Main/Status Device/Status Device-backups/*
+*.kicad_pcb.lck
