Rounded Video Pixel Advance traces.

--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,4 @@
 /Kicad/Computer/Main/Clock Device/Clock Device-backups/*
 /Kicad/Computer/Main/Status Device/Status Device-backups/*
 *.kicad_pcb.lck
+/Kicad/Computer/Video/Video Pixel Advance/Video Pixel Advance-backups/*
