Renamed Blank and Sync to Video Blank and Sync.

--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,4 @@
 /Kicad/Computer/Main/Status Device/Status Device-backups/*
 *.kicad_pcb.lck
 /Kicad/Computer/Video/Video Pixel Advance/Video Pixel Advance-backups/*
+/Kicad/Computer/Video/Video Blank and Sync/Video Blank and Sync-backups/*
