Swapped Main Memory Select select line order.

--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,4 @@
 *.kicad_pcb.lck
 /Kicad/Computer/Video/Video Pixel Advance/Video Pixel Advance-backups/*
 /Kicad/Computer/Video/Video Blank and Sync/Video Blank and Sync-backups/*
+/Website/Old experimental/index.html_backup/*
