Cleaned up Pico Wide Connect and added an HCP65 Tester.

--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,4 @@
 /Website/Old experimental/index.html_backup/*
 /Kicad/Computer/Audio/Audio Address Decode/Audio Address Decode-backups/*
 /Kicad/Computer/Audio/Audio Clock/Audio Clock-backups/*
+/Kicad/Pico/HCP65 Tester/HCP65 Tester-backups/*
