PCBs for EPM7160S Programmer and EPM570 Programmer.

--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,4 @@
 /Kicad/Computer/Audio/Audio Address Decode/Audio Address Decode-backups/*
 /Kicad/Computer/Audio/Audio Clock/Audio Clock-backups/*
 /Kicad/Pico/HCP65 Tester/HCP65 Tester-backups/*
+/Kicad/EPM570 Programmer/EPM570 Programmer-backups/*
