Added HCP65 Board and Component testers.

--- a/.gitignore
+++ b/.gitignore
@@ -320,3 +320,5 @@
 /Kicad/Computer/Audio/Audio Clock/Audio Clock-backups/*
 /Kicad/Pico/HCP65 Tester/HCP65 Tester-backups/*
 /Kicad/EPM570 Programmer/EPM570 Programmer-backups/*
+/Kicad/Pico/HCP65 Board Tester/HCP65 Board Tester-backups/*
+/Kicad/Pico/HCP65 Component Tester/HCP65 Component Tester-backups/*
