Added LED Digit Tester board.

--- a/.gitignore
+++ b/.gitignore
@@ -322,3 +322,4 @@
 /Kicad/EPM570 Programmer/EPM570 Programmer-backups/*
 /Kicad/Pico/HCP65 Board Tester/HCP65 Board Tester-backups/*
 /Kicad/Pico/HCP65 Component Tester/HCP65 Component Tester-backups/*
+/Kicad/Pico/LED Digit Tester/LED Digit Tester-backups/*
