Added an EPM7032 Programmer and fixed the EPM570 Programmer.

--- a/.gitignore
+++ b/.gitignore
@@ -323,3 +323,4 @@
 /Kicad/Pico/HCP65 Board Tester/HCP65 Board Tester-backups/*
 /Kicad/Pico/HCP65 Component Tester/HCP65 Component Tester-backups/*
 /Kicad/Pico/LED Digit Tester/LED Digit Tester-backups/*
+/Kicad/EPM7032S Programmer/EPM7032S Programmer-backups/*
