Added EPM7032S Programmer and EPM570 Programmer and rounded Pico Power tracks.

--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,5 @@
 /Kicad/Old/Video Monitor/LED Address 4x4/LED Address 4x4-backups/*
 /Kicad/Old/Video Monitor/LED Panel 4x4/LED Panel 4x4-backups/*
 /Kicad/Programmers/EPM7160S Programmer/EPM7160S Programmer-backups/*
+/Kicad/Programmers/EPM570 Programmer/EPM570 Programmer-backups/*
+/Kicad/Programmers/EPM7032S Programmer/EPM7032S Programmer-backups/*
