Fixed RAM and ROM selects not swapping before native mode.

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@
 /Kicad/Programmers/EPM7160S Programmer/EPM7160S Programmer-backups/*
 /Kicad/Programmers/EPM570 Programmer/EPM570 Programmer-backups/*
 /Kicad/Programmers/EPM7032S Programmer/EPM7032S Programmer-backups/*
+/Kicad/Computer/Processor/HCP65 Native Memory Select/HCP65 Native Memory Select-backups/*
