--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@
 /Kicad/Programmers/EPM570 Programmer/EPM570 Programmer-backups/*
 /Kicad/Programmers/EPM7032S Programmer/EPM7032S Programmer-backups/*
 /Kicad/Computer/Processor/HCP65 Native Memory Select/HCP65 Native Memory Select-backups/*
+/Kicad/Tester/LCD 14 Segment Tester/LCD 14 Segment Tester-backups/*
+/Kicad/Tester/LCD Dual 7 Segment Tester/LCD Dual 7 Segment Tester-backups/*
