Added a TSSOP32 adapter.

--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@
 /Kicad/Computer/Processor/HCP65 Native Memory Select/HCP65 Native Memory Select-backups/*
 /Kicad/Tester/LCD 14 Segment Tester/LCD 14 Segment Tester-backups/*
 /Kicad/Tester/LCD Dual 7 Segment Tester/LCD Dual 7 Segment Tester-backups/*
+/Kicad/Tester/TSSOP32-14mm Adapter/TSSOP32-14mm Adapter-backups/*
