Laid out LCD 14 Segment tester PCB.

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,5 @@
 /Kicad/Tester/LCD 14 Segment Tester/LCD 14 Segment Tester-backups/*
 /Kicad/Tester/LCD Dual 7 Segment Tester/LCD Dual 7 Segment Tester-backups/*
 /Kicad/Tester/TSSOP32-14mm Adapter/TSSOP32-14mm Adapter-backups/*
+/Kicad/Computer/Old/Standard PCB/Standard PCB-backups/*
+/Kicad/Computer/Old/Sound V1/Sound V1-backups/*
