Updated PICO GPIO Address Decode.

--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,4 @@
 /Kicad/Tester/TSSOP32-14mm Adapter/TSSOP32-14mm Adapter-backups/*
 /Kicad/Computer/Old/Standard PCB/Standard PCB-backups/*
 /Kicad/Computer/Old/Sound V1/Sound V1-backups/*
+/Kicad/Pico/Pico GPIO Address Decode/Pico GPIO Address Decode-backups/*
