Power and Reset board.

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,5 @@
 /Kicad/Computer/Old/Standard PCB/Standard PCB-backups/*
 /Kicad/Computer/Old/Sound V1/Sound V1-backups/*
 /Kicad/Pico/Pico GPIO Address Decode/Pico GPIO Address Decode-backups/*
+/Kicad/Computer/Power/Power and Reset/Power and Reset-backups/*
+/Kicad/Old/Pico Programmer/Pico Power/Pico-backups/*
