Routed a 32bit GPIO Board.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@
 /Kicad/Pico/Pico GPIO Address Decode/Pico GPIO Address Decode-backups/*
 /Kicad/Computer/Power/Power and Reset/Power and Reset-backups/*
 /Kicad/Old/Pico Programmer/Pico Power/Pico-backups/*
+/Kicad/Pico/GPIO 32bit Board/GPIO 32bit Board-backups/*
+/Kicad/Pico/Signal Protection/Signal Protection-backups/*
