Added GPIO Bus.

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@
 /Kicad/Pico/GPIO 32bit Board/GPIO 32bit Board-backups/*
 /Kicad/Pico/Signal Protection/Signal Protection-backups/*
 /Kicad/Pico/GPIO Power Switch/GPIO Power Switch-backups/*
+/Kicad/Pico/GPIO Bus/GPIO Bus-backups/*
+/Kicad/Pico/GPIO Controller Board/GPIO Controller Board-backups/*
