Added GPIO Backplan Board.

--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@
 /Kicad/Pico/GPIO Power Switch/GPIO Power Switch-backups/*
 /Kicad/Pico/GPIO Bus/GPIO Bus-backups/*
 /Kicad/Pico/GPIO Controller Board/GPIO Controller Board-backups/*
+/Kicad/Pico/GPIO Backplane Board/GPIO Backplane Board-backups/*
