Added 74LVC2T45 datasheet.

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,4 @@
 /Kicad/Pico/GPIO Bus/GPIO Bus-backups/*
 /Kicad/Pico/GPIO Controller Board/GPIO Controller Board-backups/*
 /Kicad/Pico/GPIO Backplane Board/GPIO Backplane Board-backups/*
+/Kicad/Computer/Processor/HCP65 Coprocessor/HCP65 Coprocessor-backups/*
