Added a Coprocessor Memory board.

--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,5 @@
 /Kicad/Pico/GPIO Controller Board/GPIO Controller Board-backups/*
 /Kicad/Pico/GPIO Backplane Board/GPIO Backplane Board-backups/*
 /Kicad/Computer/Processor/HCP65 Coprocessor/HCP65 Coprocessor-backups/*
+/Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/HCP65 Coprocessor Memory-2025-06-15_194955.zip
+/Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/*
