Renamed Coprocessor Memory board to Memory 1MB.

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,4 @@
 /Kicad/Computer/Processor/HCP65 Coprocessor/HCP65 Coprocessor-backups/*
 /Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/HCP65 Coprocessor Memory-2025-06-15_194955.zip
 /Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/*
+/Kicad/Computer/Memory/Memory 1MB/Memory 1MB-backups/*
