--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,4 @@
 /Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/HCP65 Coprocessor Memory-2025-06-15_194955.zip
 /Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/*
 /Kicad/Computer/Memory/Memory 1MB/Memory 1MB-backups/*
+/Kicad/Computer/Processor/W65C816 Minimal/W65C816 Minimal-backups/*
