Added Coprocessor Board and shrunk W65C816 Latch.

--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,5 @@
 /Kicad/Computer/Processor/HCP65 Coprocessor Memory/HCP65 Coprocessor Memory-backups/*
 /Kicad/Computer/Memory/Memory 1MB/Memory 1MB-backups/*
 /Kicad/Computer/Processor/W65C816 Minimal/W65C816 Minimal-backups/*
+/Kicad/Computer/Coprocessor/Coprocessor Board/Coprocessor Board-backups/*
+/Kicad/Computer/Coprocessor/Coprocessor Support/Coprocessor Support-backups/*
