Re-did Mainboard power supply.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@
 /Kicad/Computer/Coprocessor/Coprocessor Memory Select/Coprocessor Memory Select-backups/*
 /Kicad/Computer/Coprocessor/Coprocessor Transceiver/Coprocessor Transceiver-backups/*
 /Kicad/Computer/Processor/HCP65 Power/HCP65 Power-backups/*
+/Kicad/Tester/ROM 2316 to 2716/ROM 2316 to 2716-backups/*
