Added RAM 48K Select.

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,5 @@
 /Kicad/Computer/Coprocessor/Coprocessor Transceiver/Coprocessor Transceiver-backups/*
 /Kicad/Computer/Processor/HCP65 Power/HCP65 Power-backups/*
 /Kicad/Tester/ROM 2316 to 2716/ROM 2316 to 2716-backups/*
+/Kicad/Computer/Processor/W65C816 Power/W65C816 Power-backups/*
+/Kicad/Tester/RAM 48K Select/RAM 48K Select-backups/*
