--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@
 /Kicad/Tester/ROM 2316 to 2716/ROM 2316 to 2716-backups/*
 /Kicad/Computer/Processor/W65C816 Power/W65C816 Power-backups/*
 /Kicad/Tester/RAM 48K Select/RAM 48K Select-backups/*
+/Kicad/Pico/HCP65 40 Pin Tester/HCP65 40 Pin Tester-backups/*
