56 Pin component tester schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -374,3 +374,4 @@
 /Kicad/Computer/Processor/W65C816 Power/W65C816 Power-backups/*
 /Kicad/Tester/RAM 48K Select/RAM 48K Select-backups/*
 /Kicad/Pico/HCP65 40 Pin Tester/HCP65 40 Pin Tester-backups/*
+/Kicad/Pico/HCP65 56 Pin Tester/HCP65 56 Pin Tester-backups/*
