--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@
 /Kicad/Tester/RAM 48K Select/RAM 48K Select-backups/*
 /Kicad/Pico/HCP65 40 Pin Tester/HCP65 40 Pin Tester-backups/*
 /Kicad/Pico/HCP65 56 Pin Tester/HCP65 56 Pin Tester-backups/*
+/Kicad/Pico/HCP65 32 Pin Tester/HCP65 32 Pin Tester-backups/*
