--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@
 /Kicad/Pico/HCP65 40 Pin Tester/HCP65 40 Pin Tester-backups/*
 /Kicad/Pico/HCP65 56 Pin Tester/HCP65 56 Pin Tester-backups/*
 /Kicad/Pico/HCP65 32 Pin Tester/HCP65 32 Pin Tester-backups/*
+/Kicad/Pico/HCP65 24 Pin Tester/HCP65 24 Pin Tester-backups/*
