64 Pin component tester schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@
 /Kicad/Pico/HCP65 56 Pin Tester/HCP65 56 Pin Tester-backups/*
 /Kicad/Pico/HCP65 32 Pin Tester/HCP65 32 Pin Tester-backups/*
 /Kicad/Pico/HCP65 24 Pin Tester/HCP65 24 Pin Tester-backups/*
+/Kicad/Pico/HCP65 64 Pin Tester/HCP65 64 Pin Tester-backups/*
