--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,4 @@
 /Kicad/Pico/HCP65 24 Pin Tester/HCP65 24 Pin Tester-backups/*
 /Kicad/Pico/HCP65 64 Pin Tester/HCP65 64 Pin Tester-backups/*
 /Kicad/Computer/Component Boards/Added 8bit/Added 8bit-backups*
+/Kicad/Old/Component Tester/HCP65 Component Tester-backups/*
