Added Main Memory Full Enable

--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,5 @@
 /Kicad/Pico/HCP65 64 Pin Tester/HCP65 64 Pin Tester-backups/*
 /Kicad/Computer/Component Boards/Added 8bit/Added 8bit-backups*
 /Kicad/Old/Component Tester/HCP65 Component Tester-backups/*
+/Kicad/Computer/Main/Main Memory Full Enable/Main Memory Full Enable-backups/*
+/Kicad/Computer/Main/Mainboard Full/Mainboard Full-backups/*
