Added Main Memory Small Abort.

--- a/.gitignore
+++ b/.gitignore
@@ -382,3 +382,4 @@
 /Kicad/Old/Component Tester/HCP65 Component Tester-backups/*
 /Kicad/Computer/Main/Main Memory Full Enable/Main Memory Full Enable-backups/*
 /Kicad/Computer/Main/Mainboard Full/Mainboard Full-backups/*
+/Kicad/Computer/Main/Main Memory Small Abort/Main Memory Abort Small-backups/*
