--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,5 @@
 /Kicad/Computer/Main/Main Memory Full Enable/Main Memory Full Enable-backups/*
 /Kicad/Computer/Main/Mainboard Full/Mainboard Full-backups/*
 /Kicad/Computer/Main/Main Memory Small Abort/Main Memory Abort Small-backups/*
+/Kicad/Computer/Main/Main Memory Small Abort/Main Memory Small Abort-backups/*
+/Kicad/Computer/Main/Processor Full Device/Processor Full Device-backups/*
