--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,4 @@
 /Kicad/Computer/Main/Main Memory Small Abort/Main Memory Abort Small-backups/*
 /Kicad/Computer/Main/Main Memory Small Abort/Main Memory Small Abort-backups/*
 /Kicad/Computer/Main/Processor Full Device/Processor Full Device-backups/*
+/Kicad/Computer/Main/Processor Small Device/Processor Small Device-backups/*
