Added Processor Reset Device.

--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,4 @@
 /Kicad/Computer/Main/Main Memory Small Abort/Main Memory Small Abort-backups/*
 /Kicad/Computer/Main/Processor Full Device/Processor Full Device-backups/*
 /Kicad/Computer/Main/Processor Small Device/Processor Small Device-backups/*
+/Kicad/Computer/Main/Processor Reset Device/Processor Reset Device-backups/*
