Added Processor Reset Device to Mainboard Small.

--- a/.gitignore
+++ b/.gitignore
@@ -387,3 +387,6 @@
 /Kicad/Computer/Main/Processor Full Device/Processor Full Device-backups/*
 /Kicad/Computer/Main/Processor Small Device/Processor Small Device-backups/*
 /Kicad/Computer/Main/Processor Reset Device/Processor Reset Device-backups/*
+/Kicad/Computer/Main/Main Memory Small Enable/Main Memory Enable-backups/*
+/Kicad/Computer/Main/Main Memory Small Enable/Main Memory Small Enable-backups/*
+/Kicad/Computer/Main/Main Memory Full Abort/Main Memory Full Abort-backups/*
