Fixing up Graphics Main access.

--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,5 @@
 /Kicad/Boards/Board 2x32 W22.86/Board 2x32 W22.86-backups/*
 /Kicad/Boards/Board 2x36 W22.86/Board 2x36 W22.86-backups/*
 /Kicad/Old/Computer/HCP65 Native Memory Select/HCP65 Native Memory Select-backups/*
+/Kicad/Computer/Graphics/Graphics Main Data/Graphics Main Data-backups/*
+/Kicad/Computer/Main/Main Memory Small Abort/Main Memory Small Abort-backups/*
