Converted WinCUPL project to WinCUPL II.

--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,12 @@
 /Kicad/Old/Computer/HCP65 Native Memory Select/HCP65 Native Memory Select-backups/*
 /Kicad/Computer/Graphics/Graphics Main Data/Graphics Main Data-backups/*
 /Kicad/Computer/Main/Main Memory Small Abort/Main Memory Small Abort-backups/*
+/SevenSegment/22V10/DUALHEX7SEG.abs
+/SevenSegment/22V10/DUALHEX7SEG.pdf
+/SevenSegment/22V10/DUALHEX7SEG.pla
+/SevenSegment/22V10/DUALHEX7SEG.sim
+/SevenSegment/22V10/tmpcsim.im
+/SevenSegment/16V8/HEX7SEG.abs
+/SevenSegment/16V8/HEX7SEG.lst
+/SevenSegment/16V8/HEX7SEG.pla
+/SevenSegment/16V8/HEX7SEG.sim
