--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,5 @@
 /SevenSegment/16V8/HEX7SEG.lst
 /SevenSegment/16V8/HEX7SEG.pla
 /SevenSegment/16V8/HEX7SEG.sim
+/SevenSegment/16V8/Hex7Seg.log
+
