Changing component board sockets.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
+fp-info-cache
 /Kicad/65C816_Unit/65C816_Unit.sch-bak
-/Kicad/65C816_Unit/fp-info-cache
 /Pico/LCDBusReader/build/
 /Kicad/65C816_Unit/LCD Bus Reader/Gerber
-/Kicad/65C816_Unit/LCD Bus Reader/fp-info-cache
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
-/Kicad/65C816 Unit/fp-info-cache
-/Kicad/LCD Bus Reader/fp-info-cache
 /Kicad/65C816 Unit/65C816_Unit.sch-bak
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.kicad_pcb-bak
 /Kicad/65C816_Unit/LCD Bus Reader/LCD Bus Reader.sch-bak
@@ -49,8 +46,6 @@
 /Kicad/Computer/MPU Signals/MPU Signals-backups
 #auto_saved_files#
 /Kicad/Computer/MPU Signals/MPU Signals-backups
-/Kicad/Computer/MPU Signals/fp-info-cache
-/Kicad/Computer/Selector State/fp-info-cache
 /Kicad/LCD Bus Reader/LCD Bus Reader-backups
 /Kicad/Pico/Pico Debugger/Pico Debugger-backups
 /Kicad/Keypad/Keypad-backups
@@ -265,8 +260,6 @@
 /Kicad/Computer/Graphics/Video Board - Signals-backups/*
 /Kicad/Computer/Component Boards/Adder 16bit/Adder 16bit-backups/*
 /Kicad/Computer/Graphics/Graphics Board/Graphics Board-backups/*
-/Kicad/Computer/Graphics/fp-info-cache
-/Kicad/Computer/Component Boards/Adder 16bit/fp-info-cache
 /Kicad/Computer/Graphics/Graphics Signals/Graphics Signals-backups/*
 /Kicad/Computer/Graphics/Graphics Transparency/Graphics Transparency-backups/*
 /Kicad/Computer/Audio/Sound Address Decode/Sound Address Decode-backups/*
