Fixed another clearance violation

--- a/.gitignore
+++ b/.gitignore
@@ -410,4 +410,5 @@ fp-info-cache
 /SevenSegment/16V8/HEX7SEG.pla
 /SevenSegment/16V8/HEX7SEG.sim
 /SevenSegment/16V8/Hex7Seg.log
-
+/Kicad/Old/Clearance Bug/Clearance Bug-backups/*
+/Kicad/Old/Clearance Bug.zip
