Ignore Main Buffer backups.

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,7 @@ fp-info-cache
 /SevenSegment/16V8/Hex7Seg.log
 /Kicad/Old/Clearance Bug/Clearance Bug-backups/*
 /Kicad/Old/Clearance Bug.zip
+
+Kicad/Computer/Component Boards/Main Address Buffer/Main Address Buffer-backups/
+
+Kicad/Computer/Component Boards/Main Data Buffer/Main Data Buffer-backups/
