Added inputs and outputs to the Processor Board schematic.

--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,5 @@ fp-info-cache
 Kicad/Computer/Component Boards/Main Address Buffer/Main Address Buffer-backups/
 
 Kicad/Computer/Component Boards/Main Data Buffer/Main Data Buffer-backups/
+
+/Kicad/Symbols/HCP65.bak
