Added a Hold Count board.

--- a/.gitignore
+++ b/.gitignore
@@ -423,3 +423,5 @@ Kicad/Computer/Component Boards/Main Data Buffer/Main Data Buffer-backups/
 /Kicad/Computer/Component Boards/State Reader 16bit/State Reader 16bit-backups/*
 /Kicad/Computer/Component Boards/State Reader 8bit/State Reader 8bit-backups/*
 /Kicad/Computer/Processor/HCP65 Board Presence/HCP65 Board Presence-backups/*
+
+Kicad/Computer/Processor/HCP65 Hold Count/HCP65 Hold Count-backups/
